<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">p0ng</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="homeStartSinglePlayer">Single Player</string>
    <string name="homeStartMultiPlayer">Multi-player</string>
    <string name="homeViewLeaderBoard">Leaderboards</string>
    <string name="homeOptions">Options</string>
    <string name="tvCBMusicLabel">Music Volume</string>
    <string name="tvCBEffectsLabel">Effects Volume</string>
    <string name="btnSave">Save</string>
    <string name="isPaused">Game is Paused</string>
    <string name="pauseGame">Pause Game</string>
    <string name="playerOne">Player One</string>
    <string name="playerTwo">Player Two</string>
    <string name="playerOneWins">Player One Wins!</string>
    <string name="playerTwoWins">Player Two Wins!</string>
    <string name="joinGame">Join the Game!</string>

</resources>
