<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_home"
    android:background="@color/black"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonStartSinglePlayer"
        android:text="@string/homeStartSinglePlayer"
        android:onClick="startSinglePlayer"
        style="@style/homeScreenButtons"
        />

    <Button
        android:id="@+id/buttonStartMultiPlayer"
        android:text="@string/homeStartMultiPlayer"
        android:onClick="startMultiPlayer"
        style="@style/homeScreenButtons"
        />

    <Button
        android:id="@+id/buttonViewLeaderBoard"
        android:text="@string/homeViewLeaderBoard"
        android:onClick="startLeaderBoards"
        style="@style/homeScreenButtons"
        />
    <Button
        android:id="@+id/buttonOptions"
        android:text="@string/homeOptions"
        android:onClick="startOptions"
        style="@style/homeScreenButtons"
        />
<LinearLayout
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:background="@color/white"
    android:layout_margin="@dimen/paddingTiny"
    />

    </LinearLayout>


